# ChangeLog for media-sound/alsa-driver
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.240 2006/12/06 11:43:47 flameeyes Exp $

  06 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  alsa-driver-1.0.14_pre20061130.ebuild:
  Important change: make ALSA_CARDS an use-expanded variable, so list all the
  available drivers during emerge -pv output; the default for all profiles now
  is to build all drivers (ALSA_CARDS unset), but in the next days proper
  default subsets will appear on the architecture profiles. Also fix bug
  #156729 (remove doc useflag as it's mostly internal drivers documentation
  that is available on the site and rarely useful to users, in case it can be
  re-added as app-doc/alsa-driver-docs), and bug #156757 (add check for
  CONFIG_FW_LOADER when using emu10k1 driver as it's now needed, thanks to
  Stefan Wimmer for reporting). Fix quoting, cleanup decisions for kernel
  checks, remove very ancient einfo message, use elog instead of einfo.

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> alsa-driver-1.0.13.ebuild:
  Stable on ppc64

*alsa-driver-1.0.14_pre20061130 (30 Nov 2006)

  30 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  +alsa-driver-1.0.14_pre20061130.ebuild:
  Add snapshot of alsa-driver building on 2.6.19 kernel.

  28 Oct 2006; Ryan Hill <dirtyepic@gentoo.org> alsa-driver-1.0.13.ebuild:
  Forgot to stablize alsa-driver-1.0.13 w/ alsa-headers-1.0.13 on x86.

  24 Oct 2006; Simon Stelling <blubb@gentoo.org> alsa-driver-1.0.13.ebuild:
  stable on amd64

  20 Oct 2006; <nixnut@gentoo.org> alsa-driver-1.0.13.ebuild:
  Stable on ppc wrt bug 150540

  18 Oct 2006; Joshua Jackson <tsunam@gentoo.org> alsa-driver-1.0.12.ebuild:
  Stable x86;bug #150540

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  alsa-driver-1.0.12.ebuild:
  Stable on Alpha.

  14 Oct 2006; Aron Griffis <agriffis@gentoo.org> alsa-driver-1.0.12.ebuild: