@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.240 2006/12/06 11:43:47 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/Attic/ChangeLog,v 1.241 2006/12/06 17:03:08 flameeyes Exp $
+
+  06 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
+  alsa-driver-1.0.14_pre20061130.ebuild:
+  Double-check the ALSA_CARDS variable by checking that the requested drivers
+  are supported by the ebuild and they are available on the architecture.
 
   06 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   alsa-driver-1.0.14_pre20061130.ebuild:
